--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
         <a class="contact" href="#">Contact</a>
       </nav>
       <span class="icon-search">
-        <box-icon name="search"></box-icon>
+        <a href="">
+          <box-icon name="search"></box-icon>
+        </a>
       </span>
       <span class="icon-menu">
-        <box-icon name="menu"></box-icon>
+        <a href="">
+          <box-icon name="menu"></box-icon>
+        </a>
       </span>
     </header>
 
@@ -38,7 +42,6 @@
       a temporibus est asperiores nobis cumque, soluta iure? Libero, sint
       reiciendis!
     </p>
-
     <p class="text-underline">Discover more</p>
     <div class="img-div">
       <img
@@ -89,7 +92,7 @@
         reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
         pariatur.
       </p>
-      <p class="read-more">Read More</p>
+      <p class="read-more">Read more</p>
     </div>
 
     <div class="blog">
@@ -156,7 +159,7 @@
         reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
         pariatur.
       </p>
-      <p class="read-more">Read More</p>
+      <p class="read-more">Read more</p>
     </div>
     <div class="img-div4">
       <img
